--- a/src/styles.scss
+++ b/src/styles.scss
@@ -44,3 +44,18 @@ html, body {
   /* padding: 5px; */
   margin: 0 3px 3px 0;    
 }
+
+.list-stat-block {
+  background: red;
+}
+
+.list-block {
+  background: green;
+  margin: 2px 2px 2px 2px;
+  height: 100%;
+}
+
+.stat-block {
+  background: green;
+  margin: 2px 2px 2px 2px;
+}
