--- a/src/app/components/characters/characters.component.css
+++ b/src/app/components/characters/characters.component.css
@@ -19,3 +19,16 @@
   overflow: auto;
   max-height: 500px;
 }
+
+.mat-cell {
+  font-size: 0.75em;
+}
+
+/* .mat-header-row {
+  border-bottom: 1px solid rgb(230,230,230);
+  color: rgb(130,130,130);
+  text-align: left;
+  font-size: 0.75em;
+  font-weight: 700;
+  padding: 16px 16px 16px 0;
+} */
