--- a/src/app/components/monsters/monsters.component.css
+++ b/src/app/components/monsters/monsters.component.css
@@ -1,3 +1,36 @@
-div {
-    background: blue;
+.search-form {
+    min-height: 50px;
+    display: flex;
+    align-items: baseline;
+    padding: 8px 24px 0;
+    font-size: 20px;
+    justify-content: space-between;
+  }
+  
+  .mat-form-field {
+    font-size: 14px;
+    flex-grow: 1;
+    margin-left: 6px;
+    margin-right: 6px;
+  }
+  
+  .mat-table {
+    overflow: auto;
+    /* max-height: 500px; */
+    margin-left: 6px;
+    margin-right: 6px;
+  }
+  .mat-paginator {
+    overflow: auto;
+    /* max-height: 500px; */
+    margin-left: 6px;
+    margin-right: 6px;
+  }
+  .mat-cell {
+    font-size: 0.75em;
+  }
+
+  .mat-header-row, .mat-row {
+    min-height: 32px;
+    padding: 0 12px;
 }
