--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
                 <div fxFlex></div>
                 <button mat-button [mat-menu-trigger-for]="appMenu"><mat-icon>menu</mat-icon></button>
                 <mat-menu #appMenu="matMenu">
-                  <button mat-menu-item> Settings </button>
+                  <button mat-menu-item (click)="updateData()"> Update data </button>
                   <button mat-menu-item> Help </button>
                 </mat-menu>
             </mat-toolbar>
